# Debrute

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  Cargo.toml  DESIGN.md  README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.build.json  vitest.config.ts
.cargo/: config.toml
apps/runtime/: Cargo.toml  build.rs
apps/runtime/src/: integration_process.rs  integrations.rs  lib.rs  login.rs  main.rs  model_operation.rs  process.rs  tray.rs  workers.rs
apps/runtime/src/cli/: batch.rs  mod.rs  model_docs.rs  parser.rs  records.rs  service.rs  spec.rs  tests.rs
apps/runtime/src/control/: client.rs  frame.rs  handshake.rs  mod.rs  protocol.rs  server.rs  writer.rs
apps/runtime/src/control/desktop/: mod.rs
apps/runtime/src/control/endpoint/: macos.rs  mod.rs  windows.rs
apps/runtime/src/generation/: audio.rs  common.rs  http.rs  image.rs  mod.rs  redaction.rs  service.rs  tts.rs  types.rs  video.rs
apps/runtime/src/generation/audio/: elevenlabs_multilingual_v2.rs  elevenlabs_music_v2.rs  elevenlabs_sound_effects_v2.rs  elevenlabs_v3_tts.rs  fal_stable_audio_2_5.rs  fal_stable_audio_3_small_sfx.rs  gemini_3_1_flash_tts_preview.rs  lyria_3_clip_preview.rs  lyria_3_pro_preview.rs  minimax_music_3_0.rs  minimax_speech_2_8_hd.rs  openai_gpt_4o_mini_tts.rs  openai_tts_1.rs  openai_tts_1_hd.rs  qwen3_tts_flash.rs  seed_tts_2_0.rs
apps/runtime/src/generation/image/: doubao_seedream_5_lite.rs  doubao_seedream_5_pro.rs  fal_flux_dev.rs  fal_flux_dev_image_to_image.rs  gemini_3_1_flash_image.rs  gemini_3_pro_image.rs  gpt_image_1.rs  gpt_image_2.rs  minimax_image_01.rs  qwen_image_2_0_2026_03_03.rs  qwen_image_2_0_pro_2026_06_22.rs  vydra_grok_imagine.rs  wan_2_7_image.rs
apps/runtime/src/generation/video/: seedance_2.rs  seedance_2_fast.rs  seedance_2_mini.rs
apps/runtime/src/global/: mod.rs  models.rs  runtime.rs  store.rs
apps/runtime/src/photoshop/: discovery.rs  error.rs  mod.rs  pairing.rs  service.rs  transfer.rs  types.rs
apps/runtime/src/product/: archive.rs  bootstrap.rs  commit.rs  manifest.rs  mod.rs  platform.rs  release.rs  service.rs  store.rs  tests.rs  windows_tests.rs
apps/runtime/src/project/: canvas.rs  canvas_map.rs  documents.rs  error.rs  feedback.rs  files.rs  generated_assets.rs  media.rs  mod.rs  native_shell.rs  paths.rs  platform.rs  registry.rs  service.rs  tests.rs  types.rs  watcher.rs
apps/runtime/src/project/feedback/: artifacts.rs
apps/runtime/src/project/previews/: cache.rs  libvips_adapter.rs  mod.rs  raster.rs  video.rs
apps/runtime/src/terminal/: emulator.rs  mod.rs  protocol.rs  service.rs
apps/runtime/src/workbench/: authority.rs  connections.rs  http.rs  mod.rs  multipart.rs  project_routes.rs  routes.rs  routing.rs  services.rs  websocket.rs  working_copy.rs
apps/runtime/tests/: cli_binary.rs  control_client.rs  control_endpoint.rs  control_frame.rs  control_server.rs  desktop_window_topology.rs  global_runtime_state.rs  integration_state.rs  runtime_lifecycle.rs  start_at_login.rs  workbench_http.rs
assets/: native-raster-payload-lock.json  runtime-model-catalog.json
docs/: README.md  brand.md  canvas-feedback.md  canvas-media.md  canvas-rendering.md  canvas.md  cli.md  design-system.md  desktop-shell.md  development.md  generated-assets.md  integrations.md  model-generation.md  photoshop-bridge.md  product-model.md  releases.md  runtime-architecture.md  security.md  testing.md  text-files.md  workbench.md
scripts/: archive-product-seed.mjs  assemble-product-seed.mjs  canvas-pan-roundtrip-diagnostic.mjs  check-architecture.mjs  check-test-layout.ts  clean.mjs  copy-runtime-assets.mjs  desktop-release-assets.mjs  dev-electron-workbench.ts  dev-workbench.ts  doctor.mjs  generate-update-manifest.mjs  package-axis-cli.mjs  (+25 more)
(+1101 files in other folders)
