[workspace]
members = ["apps/runtime", "packages/native-control", "packages/native-fs", "packages/native-process", "packages/windows-product-fs"]
resolver = "3"

[workspace.package]
version = "0.0.4"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"

[workspace.dependencies]
axum = "0.8.9"
base64 = "0.22.1"
cap-std = "4.0.2"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
fs2 = "0.4.3"
flate2 = "1.1.9"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["async-await", "std"] }
getrandom = "0.4.3"
hyper = "1.10.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
image = { version = "0.25.10", default-features = false, features = ["avif", "jpeg", "png", "tiff", "webp"] }
junction = { version = "2.0.0", default-features = false }
libc = "0.2.186"
notify = "8.2.0"
nix = { version = "0.31.3", features = ["fs", "socket", "user"] }
portable-pty = "0.9.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
regex = "1.12.2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "multipart", "native-tls"] }
resvg = "0.47.0"
rs-vips = "=0.7.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
time = { version = "0.3.45", features = ["formatting", "parsing"] }
tao = "=0.35.3"
tray-icon = "=0.24.1"
tokio = { version = "1.52.3", features = ["fs", "io-util", "net", "rt", "sync", "time"] }
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }
uuid = { version = "1", features = ["v4"] }
url = "2.5.8"
vt100 = "0.16.2"
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_JobObjects", "Win32_System_Pipes", "Win32_System_SystemServices", "Win32_System_Threading"] }
winreg = "0.55.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
